Refactor: Unified design system to Protocollo.css for configuration and dashboard pages. Eliminated inline styles and standardized UI components across index, home_page, area_privata, account_azienda, and account_privati according to Titanium Protocol V3.1.

--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -23,9 +23,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/dashboard_common.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/account.css?v=3.8">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -49,11 +47,10 @@
             <!-- Search Bar (Clean Style Auto-Search) -->
             <!-- Search Bar (Titanium Glass Style) -->
             <div class="search-container mb-20">
-                <div class="glass-field border-glow"
-                    style="border-radius: 12px; height: 50px; padding: 0 1rem; display: flex; align-items: center; gap: 0.75rem;">
-                    <span class="material-symbols-outlined" style="opacity: 0.5;">search</span>
+                <div class="glass-field border-glow rounded-xl h-50px px-4 flex items-center gap-3">
+                    <span class="material-symbols-outlined opacity-50">search</span>
                     <input type="search" placeholder="Cerca account..." id="search-input"
-                        style="width: 100%; background: transparent; border: none; outline: none; height: 100%; font-size: 1rem; color: var(--text-primary);">
+                        class="w-full bg-transparent border-none outline-none h-full text-base text-primary">
                 </div>
             </div>
 
