--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -23,9 +23,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
     <!-- Design System Master (Titanium Account Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/dashboard_common.css?v=1.0">
-    <link rel="stylesheet" href="assets/css/account.css?v=3.7">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -49,7 +47,7 @@
         <main class="titanium-main">
 
             <!-- NUCLEO NAVIGAZIONE (Matrix Grid 2x2) -->
-            <div class="matrix-grid" style="margin-bottom: 2rem; position: relative; z-index: 50;">
+            <div class="matrix-grid mb-8 relative z-50">
 
                 <!-- Account Standard -->
                 <a href="account_privati.html?type=standard" class="matrix-card card-blue border-glow adaptive-shadow">
@@ -65,7 +63,7 @@
                     </div>
                     <div class="card-text-block">
                         <h3 data-t="section_personal_accounts">Account Personali</h3>
-                        <p data-t="section_personal_desc" style="font-size: 0.75rem;">Cassaforte privata</p>
+                        <p data-t="section_personal_desc" class="text-xs text-secondary">Cassaforte privata</p>
                     </div>
                 </a>
 
@@ -83,7 +81,7 @@
                     </div>
                     <div class="card-text-block">
                         <h3 data-t="section_shared_accounts">Account Condivisi</h3>
-                        <p data-t="section_shared_desc" style="font-size: 0.75rem;">Collaborazione</p>
+                        <p data-t="section_shared_desc" class="text-xs text-secondary">Collaborazione</p>
                     </div>
                 </a>
 
@@ -101,7 +99,7 @@
                     </div>
                     <div class="card-text-block">
                         <h3 data-t="section_note">Note</h3>
-                        <p data-t="section_note_desc" style="font-size: 0.75rem;">Appunti personali</p>
+                        <p data-t="section_note_desc" class="text-xs text-secondary">Appunti personali</p>
                     </div>
                 </a>
 
@@ -120,89 +118,74 @@
                     </div>
                     <div class="card-text-block">
                         <h3 data-t="section_shared_note">Note Condivise</h3>
-                        <p data-t="section_shared_note_desc" style="font-size: 0.75rem;">Appunti team</p>
+                        <p data-t="section_shared_note_desc" class="text-xs text-secondary">Appunti team</p>
                     </div>
                 </a>
             </div>
 
             <!-- TOP 10 WIDGET -->
-            <div style="margin-bottom: 2rem; position: relative; z-index: 40;">
-                <div class="titanium-card">
-                    <div class="glass-field-titanium"
-                        style="border:none; border-bottom: 1px solid var(--border-color); border-radius: 0; background: rgba(0,0,0,0.02); padding: 1rem 1.5rem;">
-                        <div style="display: flex; align-items: center; gap: 0.5rem;">
-                            <span class="material-symbols-outlined"
-                                style="color: var(--accent-orange); font-size: 18px;">star</span>
-                            <h3 style="font-size: 0.75rem; font-weight: 800; text-transform: uppercase; letter-spacing: 2px; margin: 0; color: var(--text-primary);"
-                                data-t="top_used_access">Accessi Più Usati</h3>
+            <div class="mb-8 relative z-40">
+                <div class="titanium-card overflow-hidden">
+                    <div class="widget-header">
+                        <div class="flex items-center gap-2">
+                            <span class="material-symbols-outlined text-18 icon-accent-orange">star</span>
+                            <h3 class="widget-title" data-t="top_used_access">Accessi Più Usati</h3>
                         </div>
                     </div>
-                    <div id="top-accounts-list" class="dashboard-list" style="padding: 1rem;">
-
+                    <div id="top-accounts-list" class="p-4 space-y-2">
                         <!-- Loading -->
-                        <div style="padding: 2.5rem 0; display: flex; justify-content: center; opacity: 0.2;">
-                            <span class="material-symbols-outlined"
-                                style="animation: spin 2s linear infinite;">sync</span>
+                        <div class="py-10 flex justify-center opacity-20">
+                            <span class="material-symbols-outlined animate-spin-slow">sync</span>
                         </div>
                     </div>
                 </div>
             </div>
 
             <!-- RUBRICA (Accordion) -->
-            <div
-                style="padding-left: 0.5rem; padding-right: 0.5rem; margin-bottom: 6rem; position: relative; z-index: 40;">
+            <div class="px-2 mb-24 relative z-40">
                 <div class="titanium-card">
                     <button id="rubrica-toggle-btn"
-                        style="width: 100%; padding: 1.25rem 1.5rem; display: flex; align-items: center; justify-content: space-between; transition: background 0.2s; background: transparent; border: none; cursor: pointer;">
-                        <div style="display: flex; align-items: center; gap: 1rem;">
-                            <div
-                                style="width: 2.5rem; height: 2.5rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center; background: rgba(156, 39, 176, 0.1); border: 1px solid rgba(156, 39, 176, 0.2);">
-                                <span class="material-symbols-outlined"
-                                    style="color: #9c27b0; font-size: 20px;">contacts</span>
+                        class="w-full p-5 flex items-center justify-between transition-colors bg-transparent border-none cursor-pointer">
+                        <div class="flex items-center gap-4">
+                            <div class="settings-icon-box bg-purple-glass-10 icon-accent-purple size-10">
+                                <span class="material-symbols-outlined text-xl">contacts</span>
                             </div>
-                            <div style="text-align: left;">
-                                <h3 style="font-size: 0.875rem; font-weight: 900; margin: 0; color: white;"
-                                    data-t="rubrica_title">Rubrica
-                                    Contatti</h3>
-                                <p
-                                    style="opacity: 0.6; font-size: 9px; letter-spacing: 1px; font-weight: bold; text-transform: uppercase; margin: 0; color: white;">
-                                    <span data-t="rubrica_subtitle">Gestione identità condivise</span> <span
-                                        id="rubrica-counter">(0)</span>
+                            <div class="text-left">
+                                <h3 class="text-sm font-black m-0 text-white" data-t="rubrica_title">Rubrica Contatti
+                                </h3>
+                                <p class="opacity-60 text-base-xs tracked-wider font-bold all-caps m-0 text-white">
+                                    <span data-t="rubrica_subtitle">Gestione identità condivise</span>
+                                    <span id="rubrica-counter">(0)</span>
                                 </p>
                             </div>
                         </div>
-                        <span id="rubrica-chevron" class="material-symbols-outlined"
-                            style="opacity: 0.4; color: white;">expand_more</span>
+                        <span id="rubrica-chevron"
+                            class="material-symbols-outlined opacity-40 text-white transition-all">expand_more</span>
                     </button>
 
-                    <div id="rubrica-content" style="display: none; border-top: 1px solid var(--border-color);">
+                    <div id="rubrica-content" class="hidden border-t-titanium">
                         <!-- Action Bar -->
-                        <div style="padding: 1rem; display: flex; gap: 0.5rem; background: var(--surface-sub);">
-                            <button id="add-contact-btn" class="titanium-btn-primary"
-                                style="flex: 1; height: 2.5rem; font-size: 10px; letter-spacing: 1px;"
-                                data-t="new_contact">Nuovo
-                                Contatto</button>
+                        <div class="p-4 flex gap-2 bg-surface-sub">
+                            <button id="add-contact-btn" class="titanium-btn-primary flex-1 h-10 text-xs tracked-wide"
+                                data-t="new_contact">Nuovo Contatto</button>
                         </div>
 
                         <!-- Form -->
-                        <div id="add-contact-form"
-                            style="display: none; padding: 1.5rem; flex-direction: column; gap: 1rem; background: var(--surface-vault); border-bottom: 1px solid var(--border-color);">
-                            <div class="dashboard-grid-2" style="gap: 1rem;">
+                        <div id="add-contact-form" class="hidden p-6 flex-col gap-4 bg-surface-vault border-b-titanium">
+                            <div class="grid grid-cols-2 gap-4">
                                 <input type="text" id="contact-nome" placeholder="Nome"
-                                    style="height: 3rem; padding-left: 1rem; padding-right: 1rem; border-radius: 0.75rem; border: 1px solid var(--border-color); background: var(--bg-primary); color: var(--text-primary); font-size: 0.875rem; outline: none;">
+                                    class="input-glass-standard h-12 text-sm">
                                 <input type="text" id="contact-cognome" placeholder="Cognome"
-                                    style="height: 3rem; padding-left: 1rem; padding-right: 1rem; border-radius: 0.75rem; border: 1px solid var(--border-color); background: var(--bg-primary); color: var(--text-primary); font-size: 0.875rem; outline: none;">
+                                    class="input-glass-standard h-12 text-sm">
                             </div>
                             <input type="email" id="contact-email" placeholder="Email (Unica per sharing)"
-                                style="width: 100%; height: 3rem; padding-left: 1rem; padding-right: 1rem; border-radius: 0.75rem; border: 1px solid var(--border-color); background: var(--bg-primary); color: var(--text-primary); font-size: 0.875rem; outline: none;">
-                            <button id="btn-add-contact" class="titanium-btn-primary"
-                                style="width: 100%; height: 3rem; font-weight: 800;" data-t="save_contact">SALVA
-                                CONTATTO</button>
+                                class="input-glass-standard h-12 text-sm w-full">
+                            <button id="btn-add-contact" class="titanium-btn-primary w-full h-12 font-extrabold"
+                                data-t="save_contact">SALVA CONTATTO</button>
                         </div>
 
                         <!-- Contacts List -->
-                        <div id="contacts-list"
-                            style="padding: 1rem; display: flex; flex-direction: column; gap: 0.5rem;">
+                        <div id="contacts-list" class="p-4 flex flex-col gap-2">
                             <!-- JS Generated -->
                         </div>
                     </div>
