--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -24,9 +24,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
     <!-- Design System Master (Titanium Matrix V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/dashboard_common.css?v=1.0">
-    <link rel="stylesheet" href="assets/css/account.css?v=3.7">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -52,12 +50,11 @@
             <!-- SEARCH BAR (Standard Titanium UI) -->
             <!-- SEARCH BAR (Standard Titanium UI) -->
             <div class="search-container mb-20">
-                <div class="glass-field border-glow"
-                    style="border-radius: 12px; height: 50px; padding: 0 1rem; display: flex; align-items: center; gap: 0.75rem;">
-                    <span class="material-symbols-outlined" style="opacity: 0.5;">search</span>
+                <div class="glass-field border-glow rounded-xl h-50px px-4 flex items-center gap-3">
+                    <span class="material-symbols-outlined opacity-50">search</span>
                     <input type="search" id="account-search" placeholder="Cerca account o credenziali..."
                         data-t-placeholder="search_placeholder"
-                        style="width: 100%; background: transparent; border: none; outline: none; height: 100%; font-size: 1rem; color: var(--text-primary);">
+                        class="w-full bg-transparent border-none outline-none h-full text-base text-primary">
                 </div>
             </div>
 
