--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -15,8 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -42,9 +41,9 @@
 
                 <!-- ZONA CENTRO: Titolo con Wrap Intelligente -->
                 <div class="header-center">
-                    <h2 class="header-title" data-t="account_archive">
+                    <h1 class="header-title" data-t="account_archive">
                         Archivio Account
-                    </h2>
+                    </h1>
                 </div>
 
                 <!-- ZONA DESTRA: Home (1 icona - dispari, extra a dx) -->
@@ -56,66 +55,62 @@
             </div>
         </header>
 
-        <main class="settings-container no-select" style="padding-top: 5rem; gap: 1rem;">
+        <main class="settings-container no-select pt-20 gap-4">
 
             <!-- Context Selector & Search Area -->
-            <div class="settings-group" style="margin-bottom: 0.5rem; gap: 0.5rem;">
+            <div class="settings-group mb-2 gap-2">
 
                 <!-- Selector -->
-                <div class="settings-item" style="padding: 0.8rem; margin-bottom: 0;">
+                <div class="settings-item p-3 mb-0">
                     <div class="settings-item-header">
-                        <div class="settings-icon-box"
-                            style="width: 32px; height: 32px; font-size: 1.1rem; background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
+                        <div class="settings-icon-box size-8 text-lg bg-blue-glass-10 icon-accent-blue">
                             <span class="material-symbols-outlined">filter_list</span>
                         </div>
                         <select id="archive-context-select"
-                            style="width: 100%; background: transparent; border: none; color: white; font-weight: 600; font-size: 0.9rem; outline: none; margin-left: 0.5rem; cursor: pointer;">
-                            <option value="all" style="background: #0f1932; color: white;" data-t="archive_all">Tutti
+                            class="w-full bg-transparent border-none text-white font-semibold text-sm outline-none ml-2 cursor-pointer">
+                            <option value="all" class="bg-black-90 text-white" data-t="archive_all">Tutti
                                 gli archiviati</option>
-                            <option value="privato" style="background: #0f1932; color: white;"
-                                data-t="archive_private_only">Solo Archivio Privato
+                            <option value="privato" class="bg-black-90 text-white" data-t="archive_private_only">Solo
+                                Archivio Privato
                             </option>
                         </select>
                     </div>
                 </div>
 
                 <!-- Search -->
-                <div style="position: relative;">
-                    <input type="search" placeholder="Cerca nell'archivio..." class="settings-item"
-                        data-t-placeholder="archive_search_placeholder"
-                        style="width: 100%; padding-left: 3rem; margin-bottom: 0; background: rgba(15, 25, 50, 0.6); font-size: 0.9rem;">
-                    <span class="material-symbols-outlined"
-                        style="position: absolute; left: 1rem; top: 50%; transform: translateY(-50%); opacity: 0.5; pointer-events: none;">search</span>
+                <div class="relative">
+                    <input type="search" placeholder="Cerca nell'archivio..."
+                        class="settings-item w-full pl-12 mb-0 bg-slate-900-60 text-sm"
+                        data-t-placeholder="archive_search_placeholder">
+                    <span
+                        class="material-symbols-outlined absolute left-4 top-50-percent-y opacity-50 pointer-events-none">search</span>
                 </div>
             </div>
 
             <!-- Action Bar: Empty Trash -->
-            <div style="display: flex; justify-content: flex-end; padding: 0 0.5rem;">
-                <button id="btn-empty-trash" class="auth-btn"
-                    style="width: auto; padding: 0.5rem 1rem; background: rgba(244, 67, 54, 0.1); border: 1px solid rgba(244, 67, 54, 0.3); color: #f44336; font-size: 0.8rem; display: flex; align-items: center; gap: 0.5rem;">
-                    <span class="material-symbols-outlined" style="font-size: 1.1rem;">delete_forever</span>
+            <div class="flex justify-end px-2">
+                <button id="btn-empty-trash"
+                    class="auth-btn w-auto py-2 px-4 bg-red-glass-10 border-red-30 text-red-500 text-sm flex items-center gap-2">
+                    <span class="material-symbols-outlined text-lg">delete_forever</span>
                     <span data-t="empty_trash">Svuota Cestino</span>
                 </button>
             </div>
 
             <!-- Hint Swipe -->
-            <div
-                style="display: flex; justify-content: center; gap: 1rem; opacity: 0.4; font-size: 0.7rem; font-weight: 700; text-transform: uppercase;">
-                <span style="display: flex; align-items: center; gap: 4px;"><span class="material-symbols-outlined"
-                        style="font-size: 14px;">swipe_left</span> <span data-t="restore">Ripristina</span></span>
-                <span style="display: flex; align-items: center; gap: 4px;"><span data-t="delete">Elimina</span> <span
-                        class="material-symbols-outlined" style="font-size: 14px;">swipe_right</span></span>
+            <div class="flex justify-center gap-4 opacity-40 text-07 font-bold all-caps">
+                <span class="flex items-center gap-1"><span class="material-symbols-outlined text-14">swipe_left</span>
+                    <span data-t="restore">Ripristina</span></span>
+                <span class="flex items-center gap-1"><span data-t="delete">Elimina</span> <span
+                        class="material-symbols-outlined text-14">swipe_right</span></span>
             </div>
 
             <!-- List Container -->
-            <div id="accounts-container" style="display: flex; flex-direction: column; gap: 0.75rem;">
+            <div id="accounts-container" class="flex flex-col gap-3">
                 <!-- Loading State -->
-                <div
-                    style="display: flex; flex-direction: column; align-items: center; opacity: 0.6; padding: 2.5rem 0;">
-                    <div
-                        style="width: 1.5rem; height: 1.5rem; border: 2px solid white; border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 0.5rem;">
+                <div class="flex flex-col items-center opacity-60 py-10">
+                    <div class="size-6 border-2 border-white border-t-transparent rounded-full animate-spin mb-2">
                     </div>
-                    <span style="font-size: 0.8rem;" data-t="loading">Caricamento...</span>
+                    <span class="text-sm" data-t="loading">Caricamento...</span>
                 </div>
             </div>
 
