--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -15,37 +15,12 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
-
-    <!-- CSS specifico per tabelle -->
-    <style>
-        .table-container {
-            width: 100%;
-            overflow-x: auto;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        .divide-y>*+* {
-            border-top-width: 1px;
-            border-color: rgba(255, 255, 255, 0.05);
-        }
-
-        .filled {
-            font-variation-settings: 'FILL' 1;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
     <script src="assets/js/titanium-core.js?v=3.1"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
-
-    </style>
 </head>
 
 <body class="titanium-bg">
@@ -53,7 +28,6 @@
         <!-- Faro Estetico -->
         <div class="titanium-glow"></div>
 
-        <!-- HEADER FISSO -->
         <!-- HEADER FISSO -->
         <header class="titanium-header">
             <div class="header-balanced-container">
@@ -63,9 +37,9 @@
                     </a>
                 </div>
                 <div class="header-center">
-                    <h2 class="header-title" data-t="general_config_title">
+                    <h1 class="header-title" data-t="general_config_title">
                         CONFIGURAZIONE GENERALI
-                    </h2>
+                    </h1>
                 </div>
                 <div class="header-right">
                     <a href="home_page.html" class="btn-icon-header">
@@ -78,14 +52,14 @@
 
         <main class="settings-container no-select">
             <div class="settings-group">
-                <h4 class="settings-group-title" data-t="section_notifications_logic">Logica Notifiche</h4>
+                <h4 class="settings-group-label" data-t="section_notifications_logic">Logica Notifiche</h4>
 
                 <!-- 1. Tipo Scadenza -->
-                <div class="settings-item accordion-header" data-target="container_types" style="cursor: pointer;">
+                <div class="settings-item accordion-header cursor-pointer" data-target="container_types">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
                             <div class="settings-icon-box bg-teal-glass">
-                                <span class="material-symbols-outlined filled">rule</span>
+                                <span class="material-symbols-outlined material-fill">rule</span>
                             </div>
                             <div class="settings-text">
                                 <span class="settings-label" data-t="section_general_type">Tipo Scadenza</span>
@@ -93,27 +67,29 @@
                                     Preavviso.</span>
                             </div>
                         </div>
-                        <div style="display: flex; align-items: center; gap: 1rem;">
-                            <button onclick="event.stopPropagation(); window.addTypeItem()" class="btn-icon-header"
-                                style="width: 32px; height: 32px; position: relative; border-radius: 8px;">
-                                <span class="material-symbols-outlined" style="font-size: 1.2rem;">add</span>
+                        <div class="flex items-center gap-4">
+                            <button onclick="event.stopPropagation(); window.addTypeItem()"
+                                class="btn-icon-header-small bg-blue-glass-10 icon-accent-blue">
+                                <span class="material-symbols-outlined text-xl">add</span>
                             </button>
                             <span id="icon_types" class="material-symbols-outlined settings-chevron">expand_more</span>
                         </div>
                     </div>
                 </div>
                 <div id="container_types" class="accordion-content">
-                    <table style="width: 100%; font-size: 0.75rem;">
-                        <tbody id="tbody_types"></tbody>
-                    </table>
+                    <div class="table-container">
+                        <table class="table-titanium">
+                            <tbody id="tbody_types"></tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <!-- 2. Template Email -->
-                <div class="settings-item accordion-header" data-target="container_templates" style="cursor: pointer;">
+                <div class="settings-item accordion-header cursor-pointer" data-target="container_templates">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
                             <div class="settings-icon-box bg-purple-glass">
-                                <span class="material-symbols-outlined filled">description</span>
+                                <span class="material-symbols-outlined material-fill">description</span>
                             </div>
                             <div class="settings-text">
                                 <span class="settings-label" data-t="section_email_template">Template Email</span>
@@ -121,12 +97,11 @@
                                     per l'invio</span>
                             </div>
                         </div>
-                        <div style="display: flex; align-items: center; gap: 1rem;">
+                        <div class="flex items-center gap-4">
                             <button
                                 onclick="event.stopPropagation(); window.addItem('emailTemplates', document.documentElement.lang === 'it' ? 'Nuovo Testo Email:' : 'New Email Text:')"
-                                class="btn-icon-header"
-                                style="width: 32px; height: 32px; position: relative; border-radius: 8px;">
-                                <span class="material-symbols-outlined" style="font-size: 1.2rem;">add</span>
+                                class="btn-icon-header-small bg-blue-glass-10 icon-accent-blue">
+                                <span class="material-symbols-outlined text-xl">add</span>
                             </button>
                             <span id="icon_templates"
                                 class="material-symbols-outlined settings-chevron">expand_more</span>
@@ -134,15 +109,17 @@
                     </div>
                 </div>
                 <div id="container_templates" class="accordion-content">
-                    <table style="width: 100%; font-size: 0.75rem;">
-                        <tbody id="tbody_templates" class="divide-y"></tbody>
-                    </table>
+                    <div class="table-container">
+                        <table class="table-titanium divide-y-titanium">
+                            <tbody id="tbody_templates"></tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
             <!-- Sintassi Automatica -->
             <div class="settings-group">
-                <h4 class="settings-group-title" data-t="section_syntax_title">Sintassi Automatica</h4>
+                <h4 class="settings-group-label" data-t="section_syntax_title">Sintassi Automatica</h4>
                 <div class="syntax-container">
                     <div class="syntax-row">
                         <label class="syntax-label" data-t="syntax_subject_generated">Oggetto Email Generato</label>
