--- a/Frontend/public/dettaglio_account_azienda.html
+++ b/Frontend/public/dettaglio_account_azienda.html
@@ -48,8 +48,7 @@
                         <span class="material-symbols-outlined">domain</span>
                     </div>
                 </div>
-                <div
-                    style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin-top: 1rem;">
+                <div class="hero-title-container">
                     <h1 id="header-nome-account" class="hero-title selectable">Caricamento...</h1>
                     <span id="header-categoria" class="hero-category-badge">Account Azienda</span>
                 </div>
@@ -61,12 +60,11 @@
                 <!-- Credenziali Principali -->
                 <section>
                     <div class="detail-section-header">
-                        <span class="material-symbols-outlined detail-section-icon"
-                            style="color: var(--accent-blue);">key</span>
+                        <span class="material-symbols-outlined detail-section-icon icon-accent-blue">key</span>
                         <h3 class="detail-section-title" data-t="access_credentials">Credenziali Accesso</h3>
                     </div>
 
-                    <div style="display: flex; flex-direction: column; gap: 1rem;">
+                    <div class="flex-col-gap-4">
 
                         <!-- Utente -->
                         <div class="glass-field-container">
@@ -91,7 +89,7 @@
                         </div>
 
                         <!-- Extra Company Fields -->
-                        <div class="matrix-grid" style="gap: 1rem;">
+                        <div class="matrix-grid gap-4">
                             <div class="glass-field-container">
                                 <span class="view-label" data-t="company_code_label">Cod. Società</span>
                                 <div class="glass-field border-glow">
@@ -116,8 +114,7 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="password">Password</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-password" type="text" readonly class="titanium-shield"
-                                    style="font-family: monospace; letter-spacing: 0.05em; text-transform: uppercase;">
+                                <input id="detail-password" type="text" readonly class="titanium-shield field-value-password">
                                 <button id="toggle-password" class="glass-field-btn">
                                     <span class="material-symbols-outlined">visibility</span>
                                 </button>
@@ -131,8 +128,7 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="website">Sito Web</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-website" readonly
-                                    style="color: var(--primary-light); text-decoration: underline;">
+                                <input id="detail-website" readonly class="link-underlined">
                                 <button id="open-website" class="glass-field-btn">
                                     <span class="material-symbols-outlined">open_in_new</span>
                                 </button>
@@ -148,7 +144,7 @@
                 <section id="section-banking" class="hidden">
                     <button onclick="window.toggleBanking()" class="collapsible-trigger">
                         <div class="flex-center-gap">
-                            <span class="material-symbols-outlined detail-section-icon icon-emerald">payments</span>
+                            <span class="material-symbols-outlined detail-section-icon icon-accent-green">payments</span>
                             <h3 class="detail-section-title" data-t="banking_title">IBAN & Carte</h3>
                         </div>
                         <span id="banking-chevron" class="material-symbols-outlined chevron">expand_more</span>
@@ -162,7 +158,7 @@
                 <section id="section-referente" class="hidden">
                     <button onclick="window.toggleReferente()" class="collapsible-trigger">
                         <div class="flex-center-gap">
-                            <span class="material-symbols-outlined detail-section-icon icon-blue">person_pin</span>
+                            <span class="material-symbols-outlined detail-section-icon icon-accent-blue">person_pin</span>
                             <h3 class="detail-section-title" data-t="referent_title">Referente</h3>
                         </div>
                         <span id="referente-chevron" class="material-symbols-outlined chevron">expand_more</span>
@@ -177,12 +173,12 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="matrix-grid" style="gap: 1rem;">
+                        <div class="matrix-grid gap-4">
                             <div class="glass-field-container">
                                 <span class="view-label" data-t="phone">Telefono</span>
                                 <div class="glass-field border-glow">
                                     <input id="detail-referenteTelefono" readonly>
-                                    <button class="glass-field-btn" style="color: var(--primary-light);">
+                                    <button class="glass-field-btn icon-primary-light">
                                         <span class="material-symbols-outlined">call</span>
                                     </button>
                                 </div>
@@ -191,7 +187,7 @@
                                 <span class="view-label" data-t="mobile">Cellulare</span>
                                 <div class="glass-field border-glow">
                                     <input id="detail-referenteCellulare" readonly>
-                                    <button class="glass-field-btn" style="color: var(--primary-light);">
+                                    <button class="glass-field-btn icon-primary-light">
                                         <span class="material-symbols-outlined">call</span>
                                     </button>
                                 </div>
