--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -60,11 +60,10 @@
                 <!-- Credenziali Principali -->
                 <section>
                     <div class="detail-section-header">
-                        <span class="material-symbols-outlined detail-section-icon"
-                            style="color: var(--accent-blue);">key</span>
+                        <span class="material-symbols-outlined detail-section-icon icon-accent-blue">key</span>
                         <h3 class="detail-section-title" data-t="access_credentials">Credenziali Accesso</h3>
                     </div>
-                    <div style="display: flex; flex-direction: column; gap: 1rem;">
+                    <div class="flex-col-gap-4">
 
                         <!-- Nome Account -->
                         <div class="glass-field-container">
@@ -103,8 +102,8 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="password">Password</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-password" type="text" readonly class="titanium-shield"
-                                    style="font-family: monospace; letter-spacing: 0.05em; text-transform: uppercase;">
+                                <input id="detail-password" type="text" readonly
+                                    class="titanium-shield field-value-password">
                                 <button id="toggle-password" class="glass-field-btn">
                                     <span class="material-symbols-outlined">visibility</span>
                                 </button>
@@ -118,8 +117,7 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="website">Sito Web</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-website" readonly
-                                    style="color: var(--primary-light); text-decoration: underline;">
+                                <input id="detail-website" readonly class="link-underlined">
                                 <button id="open-website" class="glass-field-btn">
                                     <span class="material-symbols-outlined">open_in_new</span>
                                 </button>
@@ -134,14 +132,14 @@
                 <!-- SECTION: BANCARIO -->
                 <section id="section-banking" class="hidden">
                     <button onclick="window.toggleBanking()" class="collapsible-trigger">
-                        <div style="display: flex; align-items: center; gap: 0.5rem;">
-                            <span class="material-symbols-outlined detail-section-icon"
-                                style="color: var(--accent-green);">payments</span>
+                        <div class="flex-center-gap">
+                            <span
+                                class="material-symbols-outlined detail-section-icon icon-accent-green">payments</span>
                             <h3 class="detail-section-title" data-t="banking_title">IBAN & Carte</h3>
                         </div>
                         <span id="banking-chevron" class="material-symbols-outlined chevron">expand_more</span>
                     </button>
-                    <div id="banking-content" class="hidden" style="flex-direction: column; gap: 1.5rem;">
+                    <div id="banking-content" class="hidden flex-col-gap-6">
                         <!-- Rendered by JS -->
                     </div>
                 </section>
@@ -149,14 +147,14 @@
                 <!-- Referente -->
                 <section>
                     <button onclick="window.toggleReferente()" class="collapsible-trigger">
-                        <div style="display: flex; align-items: center; gap: 0.5rem;">
-                            <span class="material-symbols-outlined detail-section-icon"
-                                style="color: var(--accent-blue);">person_pin</span>
+                        <div class="flex-center-gap">
+                            <span
+                                class="material-symbols-outlined detail-section-icon icon-accent-blue">person_pin</span>
                             <h3 class="detail-section-title" data-t="referent_title">Referente</h3>
                         </div>
                         <span id="referente-chevron" class="material-symbols-outlined chevron">expand_more</span>
                     </button>
-                    <div id="referente-content" class="hidden" style="flex-direction: column; gap: 1rem;">
+                    <div id="referente-content" class="hidden flex-col-gap-4">
                         <div class="glass-field-container">
                             <span class="view-label" data-t="full_name">Nome e Cognome</span>
                             <div class="glass-field border-glow">
@@ -166,12 +164,12 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="dashboard-grid-2" style="gap: 1rem;">
+                        <div class="dashboard-grid-2 gap-4">
                             <div class="glass-field-container">
                                 <span class="view-label" data-t="phone">Telefono</span>
                                 <div class="glass-field border-glow">
                                     <input id="detail-referenteTelefono" readonly>
-                                    <button class="glass-field-btn call-btn" style="color: var(--primary-light);">
+                                    <button class="glass-field-btn call-btn icon-primary-light">
                                         <span class="material-symbols-outlined">call</span>
                                     </button>
                                     <button class="glass-field-btn copy-btn">
@@ -183,7 +181,7 @@
                                 <span class="view-label" data-t="mobile">Cellulare</span>
                                 <div class="glass-field border-glow">
                                     <input id="detail-referenteCellulare" readonly>
-                                    <button class="glass-field-btn call-btn" style="color: var(--primary-light);">
+                                    <button class="glass-field-btn call-btn icon-primary-light">
                                         <span class="material-symbols-outlined">call</span>
                                     </button>
                                     <button class="glass-field-btn copy-btn">
@@ -198,15 +196,14 @@
                 <!-- Note -->
                 <section>
                     <div class="detail-section-header">
-                        <span class="material-symbols-outlined detail-section-icon"
-                            style="color: var(--accent-orange);">sticky_note_2</span>
+                        <span
+                            class="material-symbols-outlined detail-section-icon icon-accent-amber">sticky_note_2</span>
                         <h3 class="detail-section-title" data-t="notes">Note</h3>
                     </div>
                     <div class="note-display-box border-glow">
                         <p id="detail-note" class="note-text">-</p>
-                        <button id="copy-note" class="glass-field-btn"
-                            style="position: absolute; top: 0.5rem; right: 0.5rem; border:none;">
-                            <span class="material-symbols-outlined" style="font-size: 0.875rem;">content_copy</span>
+                        <button id="copy-note" class="glass-field-btn note-copy-btn">
+                            <span class="material-symbols-outlined text-sm">content_copy</span>
                         </button>
                     </div>
                 </section>
@@ -214,106 +211,89 @@
                 <!-- Allegati -->
                 <section>
                     <div class="detail-section-header">
-                        <span class="material-symbols-outlined detail-section-icon"
-                            style="color: var(--accent-blue);">attach_file</span>
+                        <span class="material-symbols-outlined detail-section-icon icon-accent-blue">attach_file</span>
                         <h3 class="detail-section-title" data-t="attachments">Allegati</h3>
                     </div>
                     <div class="attachment-card-row border-glow" onclick="openAttachments()">
-                        <div style="display: flex; align-items: center; gap: 1rem;">
+                        <div class="flex-center-gap-4">
                             <div class="attachment-icon-box">
                                 <span class="material-symbols-outlined">folder_open</span>
                             </div>
                             <div>
-                                <h4 style="font-size: 14px; font-weight: bold; color: white; display: flex; align-items: center; gap: 0.5rem; margin: 0;"
-                                    data-t="manage_attachments">
+                                <h4 class="att-title" data-t="manage_attachments">
                                     Gestisci Allegati
-                                    <span id="attachment-count"
-                                        style="background-color: rgba(255, 255, 255, 0.1); color: rgba(255, 255, 255, 0.6); padding: 0.125rem 0.5rem; border-radius: 0.375rem;"
-                                        class="hidden">0</span>
+                                    <span id="attachment-count" class="badge-soft hidden">0</span>
                                 </h4>
-                                <p style="font-size: 12px; color: rgba(255, 255, 255, 0.4); margin: 0.25rem 0 0 0;"
-                                    data-t="view_upload_files">Visualizza e carica file</p>
+                                <p class="att-desc" data-t="view_upload_files">Visualizza e carica file</p>
                             </div>
                         </div>
-                        <span class="material-symbols-outlined"
-                            style="color: rgba(255, 255, 255, 0.2);">arrow_forward_ios</span>
+                        <span class="material-symbols-outlined att-arrow">arrow_forward_ios</span>
                     </div>
                 </section>
 
                 <!-- Opzioni (Shared / Memo) -->
-                <section style="padding-bottom: 2.5rem;">
+                <section class="section-pb-10">
                     <div class="detail-section-header">
-                        <span class="material-symbols-outlined detail-section-icon"
-                            style="color: #a855f7;">visibility</span>
+                        <span class="material-symbols-outlined detail-section-icon icon-accent-purple">visibility</span>
                         <h3 class="detail-section-title" data-t="options_visibility">Opzioni e Visibilità</h3>
                     </div>
-                    <div style="display: flex; flex-direction: column; gap: 0.75rem;">
+                    <div class="flex-col-gap-3">
                         <label class="visibility-option-card border-glow">
-                            <div style="display: flex; align-items: center; gap: 0.75rem;">
-                                <span class="material-symbols-outlined"
-                                    style="color: var(--accent-blue); background-color: rgba(96, 165, 250, 0.1); padding: 0.5rem; border-radius: 0.5rem;">group</span>
+                            <div class="flex-center-gap-3">
+                                <span class="material-symbols-outlined icon-box-blue">group</span>
                                 <div>
-                                    <p style="font-size: 0.875rem; font-weight: bold; color: white; margin: 0;"
-                                        data-t="shared_account">Account Condiviso</p>
-                                    <p style="font-size: 11px; color: rgba(255, 255, 255, 0.4); margin: 0;"
-                                        data-t="share_desc">Rendi questo account visibile agli altri</p>
+                                    <p class="opt-title" data-t="shared_account">Account Condiviso</p>
+                                    <p class="opt-desc" data-t="share_desc">Rendi questo account visibile agli altri</p>
                                 </div>
                             </div>
-                            <input type="checkbox" id="detail-shared" style="display: none;">
+                            <input type="checkbox" id="detail-shared" class="hidden">
                             <div class="titanium-switch"></div>
                         </label>
 
                         <label class="visibility-option-card border-glow">
-                            <div style="display: flex; align-items: center; gap: 0.75rem;">
-                                <span class="material-symbols-outlined"
-                                    style="color: var(--accent-orange); background-color: rgba(251, 191, 36, 0.1); padding: 0.5rem; border-radius: 0.5rem;">description</span>
+                            <div class="flex-center-gap-3">
+                                <span class="material-symbols-outlined icon-box-orange">description</span>
                                 <div>
-                                    <p style="font-size: 0.875rem; font-weight: bold; color: white; margin: 0;"
-                                        data-t="memorandum">Memorandum</p>
-                                    <p style="font-size: 11px; color: rgba(255, 255, 255, 0.4); margin: 0;"
-                                        data-t="memo_desc">Segna come promemoria importante</p>
+                                    <p class="opt-title" data-t="memorandum">Memorandum</p>
+                                    <p class="opt-desc" data-t="memo_desc">Segna come promemoria importante</p>
                                 </div>
                             </div>
-                            <input type="checkbox" id="detail-hasMemo" style="display: none;">
+                            <input type="checkbox" id="detail-hasMemo" class="hidden">
                             <div class="titanium-switch"></div>
                         </label>
 
                         <label class="visibility-option-card border-glow">
-                            <div style="display: flex; align-items: center; gap: 0.75rem;">
-                                <span class="material-symbols-outlined"
-                                    style="color: var(--accent-green); background-color: rgba(16, 185, 129, 0.1); padding: 0.5rem; border-radius: 0.5rem;">share_reviews</span>
+                            <div class="flex-center-gap-3">
+                                <span class="material-symbols-outlined icon-box-green">share_reviews</span>
                                 <div>
-                                    <p style="font-size: 0.875rem; font-weight: bold; color: white; margin: 0;"
-                                        data-t="shared_memo">Memorandum Condiviso</p>
-                                    <p style="font-size: 11px; color: rgba(255, 255, 255, 0.4); margin: 0;"
-                                        data-t="shared_memo_desc">Promemoria visibile a tutti</p>
+                                    <p class="opt-title" data-t="shared_memo">Memorandum Condiviso</p>
+                                    <p class="opt-desc" data-t="shared_memo_desc">Promemoria visibile a tutti</p>
                                 </div>
                             </div>
-                            <input type="checkbox" id="detail-isMemoShared" style="display: none;">
+                            <input type="checkbox" id="detail-isMemoShared" class="hidden">
                             <div class="titanium-switch"></div>
                         </label>
                     </div>
 
                     <!-- Gestione Accessi -->
-                    <div id="shared-management" class="hidden" style="margin-top: 1.5rem;">
+                    <div id="shared-management" class="hidden mt-6">
                         <button onclick="window.toggleAccessi()" class="collapsible-trigger">
-                            <h4 class="view-label" style="display: flex; align-items: center; gap: 0.5rem; margin: 0;">
-                                <span class="material-symbols-outlined" style="font-size: 0.875rem;">group</span>
+                            <h4 class="view-label flex-center-gap">
+                                <span class="material-symbols-outlined text-sm">group</span>
                                 <span data-t="people_with_access">Persone con accesso</span>
                             </h4>
                             <span id="accessi-chevron" class="material-symbols-outlined chevron">expand_more</span>
                         </button>
 
-                        <div id="accessi-content" class="hidden"
-                            style="flex-direction: column; gap: 0.75rem; margin-top: 0.75rem;">
+                        <div id="accessi-content" class="hidden flex-col-gap-3 mt-3">
                             <!-- Lista Utenti -->
-                            <div id="guests-list" style="display: flex; flex-direction: column; gap: 0.5rem;"></div>
+                            <div id="guests-list" class="flex-col-gap"></div>
                             <!-- Input -->
                             <div class="glass-field-container">
                                 <span class="view-label" data-t="select_contact">Seleziona contatto</span>
                                 <div class="glass-field border-glow">
                                     <select id="invite-select" data-t-placeholder="select_contact_placeholder"
-                                        style="flex: 1; background: transparent; border: none; height: 100%; padding: 0 1rem; font-size: 0.875rem; color: white; cursor: pointer; outline: none;">
+                                        class="glass-select">
                                         <option value="" disabled selected data-t="select_contact_opt">Seleziona un
                                             contatto...</option>
                                     </select>
