--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -17,8 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- CSS Standard & Page Specific (Protocollo V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/dashboard_common.css?v=1.0">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
@@ -89,8 +88,8 @@
                     <!-- Mini List Dinamica -->
                     <div id="deadline-list-container" class="dashboard-list">
                         <!-- Skeleton loading items -->
-                        <div class="skeleton-text" style="height: 12px; margin-bottom: 8px; width: 80%;"></div>
-                        <div class="skeleton-text" style="height: 12px; width: 60%;"></div>
+                        <div class="skeleton-text h-3 mb-2 w-4/5"></div>
+                        <div class="skeleton-text h-3 w-3/5"></div>
                     </div>
                 </div>
 
@@ -114,8 +113,8 @@
                     <!-- Mini List Dinamica -->
                     <div id="urgenze-list" class="dashboard-list">
                         <!-- Skeleton loading items -->
-                        <div class="skeleton-text" style="height: 12px; margin-bottom: 8px; width: 70%;"></div>
-                        <div class="skeleton-text" style="height: 12px; width: 50%;"></div>
+                        <div class="skeleton-text h-3 mb-2 w-7/10"></div>
+                        <div class="skeleton-text h-3 w-1/2"></div>
                     </div>
                 </div>
 
