--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -19,8 +19,7 @@
         rel="stylesheet" />
 
     <!-- TITANIUM CORE & ACCESS SYSTEM (Protocollo V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/accesso.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core UI & Engine (Protocollo V3.1) -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -35,9 +34,9 @@
         <!-- LANGUAGE SELECTOR -->
         <div class="lang-selector-container">
             <button class="lang-btn-float" id="lang-toggle-btn">
-                <span class="material-symbols-outlined" style="font-size: 18px;">language</span>
+                <span class="material-symbols-outlined text-18">language</span>
                 <span class="lang-label" data-t="language">Lingua</span>
-                <span class="material-symbols-outlined" style="font-size: 16px;">expand_more</span>
+                <span class="material-symbols-outlined text-16">expand_more</span>
             </button>
             <div class="lang-dropdown" id="lang-dropdown">
                 <!-- JS popola questo -->
@@ -87,14 +86,14 @@
 
                 <!-- Submit Button -->
                 <button type="submit" id="new-pass-submit-btn" class="accesso-btn" data-t="save_new_pass">
-                    <span class="material-symbols-outlined" style="font-size: 20px;">save</span>
+                    <span class="material-symbols-outlined text-20">save</span>
                     Salva Password
                 </button>
 
             </form>
 
             <!-- Annulla Link -->
-            <div style="text-align: center; margin-top: 1.5rem;">
+            <div class="text-center mt-6">
                 <a href="index.html" id="cancel-password-update" class="link-register" data-t="cancel">
                     Annulla
                 </a>
@@ -102,7 +101,7 @@
 
             <!-- Footer Legale -->
             <div class="legal-footer">
-                <span style="opacity: 0.5;">Titanium Protocol V3.1</span>
+                <span class="opacity-50">Titanium Protocol V3.1</span>
             </div>
 
         </div>
