--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -15,8 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -33,21 +32,18 @@
         <!-- HEADER FISSO -->
         <header class="titanium-header">
             <div class="header-balanced-container">
-                <!-- ZONA SINISTRA: Vuota (placeholder per simmetria) -->
                 <div class="header-left">
                     <a href="home_page.html" class="btn-icon-header">
                         <span class="material-symbols-outlined">arrow_back</span>
                     </a>
                 </div>
 
-                <!-- ZONA CENTRO: Titolo con Wrap Intelligente -->
                 <div class="header-center">
-                    <h2 class="header-title" data-t="settings_title">
-                        Impostazioni
-                    </h2>
+                    <h1 class="header-title" data-t="settings_title">
+                        IMPOSTAZIONI
+                    </h1>
                 </div>
 
-                <!-- ZONA DESTRA: Home (1 icona) -->
                 <div class="header-right">
                     <a href="home_page.html" class="btn-icon-header">
                         <span class="material-symbols-outlined">home</span>
@@ -66,24 +62,19 @@
 
                     <!-- Avatar -->
                     <div class="avatar-wrapper">
-                        <div id="user-avatar-settings" class="avatar-main"
-                            style="background-image: url('assets/images/user-avatar-5.png');"></div>
+                        <div id="user-avatar-settings" class="avatar-main"></div>
                     </div>
 
-                    <!-- QR Code System (Relative per posizionamento lente) -->
-                    <div style="position: relative; width: 100px; height: 100px;">
-
+                    <!-- QR Code System -->
+                    <div class="qr-container">
                         <!-- QR Box -->
-                        <div id="qrcode-settings" class="titanium-vault"
-                            style="width: 100%; height: 100%; padding: 5px; background: white; border-radius: 20px; display: flex; justify-content: center; align-items: center; box-shadow: 0 0 20px rgba(255,255,255,0.1);">
+                        <div id="qrcode-settings" class="qr-box">
                             <!-- Generato da JS -->
                         </div>
 
-                        <!-- Lente Zoom (Absolute Bottom-Right Corner) -->
-                        <button onclick="window.showQrModal()"
-                            style="position: absolute; bottom: -8px; right: -8px; background: #3b82f6; border: 2px solid rgba(255,255,255,0.2); border-radius: 50%; width: 28px; height: 28px; display: flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.3); z-index: 10;">
-                            <span class="material-symbols-outlined"
-                                style="font-size: 1rem; color: white;">zoom_in</span>
+                        <!-- Lente Zoom -->
+                        <button onclick="window.showQrModal()" class="qr-zoom-btn">
+                            <span class="material-symbols-outlined text-16 text-white">zoom_in</span>
                         </button>
                     </div>
 
@@ -92,16 +83,14 @@
                 <div class="profile-info">
                     <h3 id="user-name-settings" class="auth-title" data-t="loading">Caricamento...</h3>
                     <button onclick="window.location.href='profilo_privato.html'" class="auth-btn profile-manage-btn">
-                        <div style="display: flex; align-items: center; gap: 1rem;">
-                            <div class="settings-icon-box"
-                                style="width: 32px; height: 32px; border-radius: 8px; background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
-                                <span class="material-symbols-outlined" style="font-size: 1.1rem;">account_circle</span>
+                        <div class="flex items-center gap-4">
+                            <div class="settings-icon-box bg-blue-glass-10 icon-accent-blue size-8 rounded-lg">
+                                <span class="material-symbols-outlined text-base">account_circle</span>
                             </div>
-                            <span data-t="manage_account_data" style="color: var(--text-primary);">Gestisci
+                            <span data-t="manage_account_data" class="text-primary">Gestisci
                                 Account</span>
                         </div>
-                        <span class="material-symbols-outlined"
-                            style="color: var(--text-secondary);">chevron_right</span>
+                        <span class="material-symbols-outlined text-secondary">chevron_right</span>
                     </button>
                 </div>
             </div>
@@ -112,9 +101,10 @@
 
                 <!-- Lingua -->
                 <div class="settings-item">
-                    <div class="settings-item-header" onclick="settingsHelper.toggleDropdown('lang-dropdown')">
+                    <div class="settings-item-header cursor-pointer"
+                        onclick="settingsHelper.toggleDropdown('lang-dropdown')">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box" style="background: rgba(156, 39, 176, 0.1); color: #9c27b0;">
+                            <div class="settings-icon-box bg-purple-glass-10 icon-accent-purple">
                                 <span class="material-symbols-outlined">translate</span>
                             </div>
                             <div>
@@ -122,8 +112,7 @@
                                 <p id="current-lang-label">Italiano</p>
                             </div>
                         </div>
-                        <span id="lang-chevron" class="material-symbols-outlined"
-                            style="color: var(--text-secondary);">expand_more</span>
+                        <span id="lang-chevron" class="material-symbols-outlined text-secondary">expand_more</span>
                     </div>
 
                     <div id="lang-dropdown" class="accordion-content">
@@ -139,12 +128,11 @@
                     </div>
                 </div>
 
-                <!-- TEMA (Selector Inglobato) -->
+                <!-- TEMA -->
                 <div class="settings-item">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
+                            <div class="settings-icon-box bg-blue-glass-10 icon-accent-blue">
                                 <span class="material-symbols-outlined">palette</span>
                             </div>
                             <div class="settings-text">
@@ -153,8 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="timer-selector" id="theme-selector"
-                        style="width: 100%; border-top: 1px solid var(--border-color); padding-top: 1rem;">
+                    <div class="timer-selector-wrap" id="theme-selector">
                         <button class="timer-btn theme-btn" data-theme="light" data-t="theme_light">Chiaro</button>
                         <button class="timer-btn theme-btn" data-theme="auto" data-t="theme_auto">Auto</button>
                         <button class="timer-btn theme-btn" data-theme="dark" data-t="theme_dark">Scuro</button>
@@ -162,12 +149,10 @@
                 </div>
 
                 <!-- Regole Scadenze -->
-                <div class="settings-item" onclick="window.location.href='regole_scadenze.html'"
-                    style="cursor: pointer;">
+                <div class="settings-item cursor-pointer" onclick="window.location.href='regole_scadenze.html'">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(255, 193, 7, 0.1); color: var(--accent-amber);">
+                            <div class="settings-icon-box bg-amber-glass-10 icon-accent-amber">
                                 <span class="material-symbols-outlined">calendar_month</span>
                             </div>
                             <div class="settings-text">
@@ -184,12 +169,10 @@
                 </div>
 
                 <!-- Archivio Account -->
-                <div class="settings-item" onclick="window.location.href='archivio_account.html'"
-                    style="cursor: pointer;">
+                <div class="settings-item cursor-pointer" onclick="window.location.href='archivio_account.html'">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(156, 39, 176, 0.1); color: var(--accent-purple);">
+                            <div class="settings-icon-box bg-purple-glass-10 icon-accent-purple">
                                 <span class="material-symbols-outlined">archive</span>
                             </div>
                             <div class="settings-text">
@@ -209,12 +192,11 @@
             <div class="settings-group">
                 <h4 class="settings-group-label" data-t="section_security">Sicurezza</h4>
 
-                <div class="settings-item" id="row-password" style="cursor: pointer;"
+                <div class="settings-item cursor-pointer" id="row-password"
                     onclick="window.location.href='imposta_nuova_password.html'">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(255, 193, 7, 0.1); color: var(--accent-amber);">
+                            <div class="settings-icon-box bg-amber-glass-10 icon-accent-amber">
                                 <span class="material-symbols-outlined">lock</span>
                             </div>
                             <div class="settings-text">
@@ -229,11 +211,10 @@
                     </div>
                 </div>
 
-                <div class="settings-item" id="row-2fa" style="cursor: pointer;">
+                <div class="settings-item cursor-pointer" id="row-2fa">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(76, 175, 80, 0.1); color: var(--accent-emerald);">
+                            <div class="settings-icon-box bg-emerald-glass-10 icon-accent-emerald">
                                 <span class="material-symbols-outlined">verified_user</span>
                             </div>
                             <div class="settings-text">
@@ -246,11 +227,10 @@
                     </div>
                 </div>
 
-                <div class="settings-item" id="row-faceid" style="cursor: pointer;">
+                <div class="settings-item cursor-pointer" id="row-faceid">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
+                            <div class="settings-icon-box bg-blue-glass-10 icon-accent-blue">
                                 <span class="material-symbols-outlined">face</span>
                             </div>
                             <div class="settings-text">
@@ -263,12 +243,11 @@
                 </div>
 
                 <!-- Storico Notifiche -->
-                <div class="settings-item" id="row-notifications-history" style="cursor: pointer;"
+                <div class="settings-item cursor-pointer" id="row-notifications-history"
                     onclick="window.location.href='notifiche_storia.html'">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
+                            <div class="settings-icon-box bg-blue-glass-10 icon-accent-blue">
                                 <span class="material-symbols-outlined">history</span>
                             </div>
                             <div class="settings-text">
@@ -287,8 +266,7 @@
                 <div class="settings-item">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(156, 39, 176, 0.1); color: var(--accent-purple);">
+                            <div class="settings-icon-box bg-purple-glass-10 icon-accent-purple">
                                 <span class="material-symbols-outlined">timer</span>
                             </div>
                             <div class="settings-text">
@@ -298,8 +276,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="timer-selector" id="lock-timer-selector"
-                        style="width: 100%; border-top: 1px solid var(--border-color); padding-top: 1rem;">
+                    <div class="timer-selector-wrap" id="lock-timer-selector">
                         <button class="timer-btn" data-val="0" data-t="lock_immediately">Subito</button>
                         <button class="timer-btn" data-val="1" data-t="lock_1min">1 Min</button>
                         <button class="timer-btn" data-val="3" data-t="lock_3min">3 Min</button>
@@ -313,11 +290,10 @@
                 <h4 class="settings-group-label" data-t="section_support">Informazioni</h4>
 
                 <!-- App Info -->
-                <div class="settings-item accordion-header" data-target="info-app" style="cursor: pointer;">
+                <div class="settings-item accordion-header cursor-pointer" data-target="info-app">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
+                            <div class="settings-icon-box bg-blue-glass-10 icon-accent-blue">
                                 <span class="material-symbols-outlined">info</span>
                             </div>
                             <div class="settings-text">
@@ -325,8 +301,8 @@
                                 <span class="settings-desc" data-t="app_info_desc">Versione e crediti</span>
                             </div>
                         </div>
-                        <span id="info-chevron" class="material-symbols-outlined"
-                            style="color: var(--text-secondary); transition: transform 0.3s;">expand_more</span>
+                        <span id="info-chevron"
+                            class="material-symbols-outlined text-secondary transition-all">expand_more</span>
                     </div>
                 </div>
                 <div id="info-app" class="accordion-content">
@@ -334,11 +310,10 @@
                 </div>
 
                 <!-- Privacy Policy -->
-                <div class="settings-item" onclick="window.location.href='privacy.html'" style="cursor: pointer;">
+                <div class="settings-item cursor-pointer" onclick="window.location.href='privacy.html'">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box"
-                                style="background: rgba(76, 175, 80, 1e-1); color: var(--accent-emerald);">
+                            <div class="settings-icon-box bg-emerald-glass-10 icon-accent-emerald">
                                 <span class="material-symbols-outlined">shield</span>
                             </div>
                             <div class="settings-text">
@@ -356,15 +331,13 @@
             </div>
 
             <!-- Logout -->
-            <div style="margin-top: 2rem; padding-bottom: 5rem;">
-                <button id="logout-btn-settings" class="auth-btn"
-                    style="background: rgba(244, 67, 54, 0.1); border: 1px solid rgba(244, 67, 54, 0.2); color: #f44336;">
-                    <div style="display: flex; align-items: center; gap: 1rem;">
-                        <div class="settings-icon-box"
-                            style="width: 32px; height: 32px; border-radius: 8px; background: #f44336; color: white;">
-                            <span class="material-symbols-outlined" style="font-size: 1.1rem;">logout</span>
+            <div class="mt-8 pb-20">
+                <button id="logout-btn-settings" class="auth-btn logout-btn">
+                    <div class="flex items-center gap-4">
+                        <div class="logout-icon-box">
+                            <span class="material-symbols-outlined text-base">logout</span>
                         </div>
-                        <span data-t="logout" style="font-weight: 700;">Esci dall'account</span>
+                        <span data-t="logout" class="font-bold">Esci dall'account</span>
                     </div>
                 </button>
             </div>
