--- a/Frontend/public/modifica_scadenza.html
+++ b/Frontend/public/modifica_scadenza.html
@@ -15,8 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -28,6 +27,7 @@
             font-variation-settings: 'FILL' 1;
         }
 
+        /* Specialized overrides for this page forms */
         input[type="text"],
         input[type="date"],
         textarea,
@@ -44,44 +44,6 @@
         select:focus,
         textarea:focus {
             outline: none !important;
-        }
-
-        .notes-textarea {
-            min-height: 120px;
-            resize: none;
-            margin-top: 0.5rem;
-            font-size: 0.9rem;
-            line-height: 1.5;
-        }
-
-        .fixed-action-container {
-            position: fixed;
-            bottom: 1.5rem;
-            left: 0;
-            right: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 100;
-            padding: 0 1.5rem;
-            pointer-events: none;
-        }
-
-        #save-changes-btn {
-            pointer-events: auto;
-            width: 100%;
-            max-width: 450px;
-            height: 60px;
-            border-radius: 18px;
-            box-shadow: 0 15px 35px rgba(37, 99, 235, 0.4);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.75rem;
-        }
-
-        .footer-spacer {
-            height: 120px;
         }
     </style>
 </head>
@@ -159,9 +121,9 @@
                             <div class="settings-text w-full">
                                 <span class="settings-label">Data Scadenza</span>
                                 <div class="relative w-full mt-1">
-                                    <input id="edit-date" type="date" style="color-scheme: dark;">
+                                    <input id="edit-date" type="date" class="color-scheme-dark">
                                     <span
-                                        class="material-symbols-outlined absolute right-0 top-1/2 -translate-y-1/2 opacity-20 pointer-events-none text-[18px]">calendar_month</span>
+                                        class="material-symbols-outlined absolute right-0 top-1/2 -translate-y-1/2 opacity-20 pointer-events-none icon-18">calendar_month</span>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +147,7 @@
                                         <option value="Documenti">Documenti</option>
                                     </select>
                                     <span
-                                        class="material-symbols-outlined absolute right-0 top-1/2 -translate-y-1/2 opacity-20 pointer-events-none text-[18px]">expand_more</span>
+                                        class="material-symbols-outlined absolute right-0 top-1/2 -translate-y-1/2 opacity-20 pointer-events-none icon-18">expand_more</span>
                                 </div>
                             </div>
                         </div>
@@ -201,7 +163,7 @@
                             </div>
                             <div class="settings-text w-full">
                                 <span class="settings-label">Note</span>
-                                <textarea id="edit-notes" class="notes-textarea"
+                                <textarea id="edit-notes" class="min-h-120 resize-none mt-2 text-sm lh-relaxed"
                                     placeholder="Note aggiuntive..."></textarea>
                             </div>
                         </div>
@@ -222,12 +184,12 @@
                                     <span class="settings-desc">Aggiungi o rimuovi file per questa scadenza</span>
                                 </div>
                             </div>
-                            <div class="settings-actions" style="display:flex; align-items:center;">
-                                <span id="attachments-count" class="text-xs font-bold text-blue-400 mr-3"
-                                    style="display:none;">0</span>
+                            <div class="settings-actions flex items-center">
+                                <span id="attachments-count"
+                                    class="text-xs font-bold text-blue-400 mr-3 hidden">0</span>
                                 <a id="btn-manage-attachments" href="#" class="btn-icon-header"
                                     style="width: 32px; height: 32px;">
-                                    <span class="material-symbols-outlined" style="font-size: 18px;">open_in_new</span>
+                                    <span class="material-symbols-outlined icon-18">open_in_new</span>
                                 </a>
                             </div>
                         </div>
@@ -237,14 +199,15 @@
         </main>
 
         <!-- AZIONE FISSA BOTTOM -->
-        <div class="fixed-action-container">
-            <button id="save-changes-btn" class="titanium-btn-primary">
+        <div class="fixed bottom-6 inset-x-0 flex justify-center items-center z-100 px-6 pointer-events-none">
+            <button id="save-changes-btn"
+                class="titanium-btn-primary pointer-events-auto w-full max-w-450 h-15 rounded-18 shadow-blue flex items-center justify-center gap-3">
                 <span class="material-symbols-outlined">save</span>
-                <span style="font-weight: 800; letter-spacing: 0.1em; text-transform: uppercase;">Salva Modifiche</span>
+                <span class="font-black tracked-widest all-caps">Salva Modifiche</span>
             </button>
         </div>
 
-        <div class="spacer-footer"></div>
+        <div class="h-30"></div>
         <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
