--- a/Frontend/public/privacy.html
+++ b/Frontend/public/privacy.html
@@ -15,8 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -41,12 +40,11 @@
 
                 <!-- ZONA CENTRO: Titolo con Wrap Intelligente (2 righe) -->
                 <div class="header-center">
-                    <div style="text-align: center;">
-                        <h2 class="header-title" style="margin: 0; line-height: 1.1;" data-t="privacy_policy_title">
+                    <div class="text-center">
+                        <h2 class="header-title m-0 leading-11" data-t="privacy_policy_title">
                             PRIVACY POLICY
                         </h2>
-                        <span data-t="privacy_extended_title"
-                            style="display: block; font-size: 0.6rem; color: rgba(255,255,255,0.5); letter-spacing: 0.1em; margin-top: 2px;">
+                        <span data-t="privacy_extended_title" class="block text-06 text-white-50 tracked-wide mt-05">
                             INFORMATIVA ESTESA
                         </span>
                     </div>
@@ -62,34 +60,31 @@
         </header>
         <div class="spacer-header"></div>
 
-        <main class="settings-container no-select" style="gap: 1rem;">
+        <main class="settings-container no-select gap-4">
 
             <!-- 1. Titolare -->
-            <div class="settings-item" style="cursor: default;">
-                <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
+            <div class="settings-item cursor-default">
+                <div class="settings-item-header flex-col items-start gap-3">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box"
-                            style="background: rgba(76, 175, 80, 0.1); color: var(--accent-emerald);">
+                        <div class="settings-icon-box icon-box-emerald">
                             <span class="material-symbols-outlined">shield_person</span>
                         </div>
                         <div class="settings-text">
                             <span class="settings-label" data-t="privacy_1_title">1. TITOLARE DEL TRATTAMENTO</span>
                         </div>
                     </div>
-                    <p class="settings-desc" data-t="privacy_1_text"
-                        style="color: #94a3b8; font-size: 0.85rem; padding-left: 0.25rem; line-height: 1.5;">
-                        Il Titolare del trattamento dei dati è <strong style="color:white;">Boschetto Diego</strong>.
+                    <p class="settings-desc text-slate-400 text-085 pl-1 leading-15" data-t="privacy_1_text">
+                        Il Titolare del trattamento dei dati è <strong class="text-white">Boschetto Diego</strong>.
                         L'applicazione è concepita per garantire la massima sicurezza e riservatezza.
                     </p>
                 </div>
             </div>
 
             <!-- 2. Dati Trattati -->
-            <div class="settings-item" style="cursor: default;">
-                <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
+            <div class="settings-item cursor-default">
+                <div class="settings-item-header flex-col items-start gap-3">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box"
-                            style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
+                        <div class="settings-icon-box icon-box-blue">
                             <span class="material-symbols-outlined">source</span>
                         </div>
                         <div class="settings-text">
@@ -97,26 +92,25 @@
                         </div>
                     </div>
 
-                    <ul class="settings-desc"
-                        style="list-style: none; padding: 0; margin-left: 0.5rem; border-left: 2px solid rgba(255,255,255,0.1); padding-left: 1rem; color: #94a3b8; font-size: 0.85rem; line-height: 1.6;">
-                        <li style="margin-bottom: 0.5rem;" data-t="privacy_2_li1"><strong
-                                style="color:white;">Registrazione:</strong> Email, nome, avatar (per
+                    <ul
+                        class="settings-desc list-none p-0 ml-2 border-l-2 border-white-10 pl-4 text-slate-400 text-085 leading-relaxed">
+                        <li class="mb-2" data-t="privacy_2_li1"><strong class="text-white">Registrazione:</strong>
+                            Email, nome, avatar (per
                             autenticazione).</li>
-                        <li style="margin-bottom: 0.5rem;" data-t="privacy_2_li2"><strong
-                                style="color:white;">Volontari:</strong> Credenziali, password, note
+                        <li class="mb-2" data-t="privacy_2_li2"><strong class="text-white">Volontari:</strong>
+                            Credenziali, password, note
                             (crittografati).</li>
-                        <li data-t="privacy_2_li3"><strong style="color:white;">Tecnici:</strong> Log di sistema gestiti
+                        <li data-t="privacy_2_li3"><strong class="text-white">Tecnici:</strong> Log di sistema gestiti
                             da Google Firebase.</li>
                     </ul>
                 </div>
             </div>
 
             <!-- 3. Sicurezza -->
-            <div class="settings-item" style="cursor: default;">
-                <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
+            <div class="settings-item cursor-default">
+                <div class="settings-item-header flex-col items-start gap-3">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box"
-                            style="background: rgba(156, 39, 176, 0.1); color: var(--accent-purple);">
+                        <div class="settings-icon-box icon-box-purple">
                             <span class="material-symbols-outlined">lock</span>
                         </div>
                         <div class="settings-text">
@@ -124,9 +118,8 @@
                         </div>
                     </div>
 
-                    <p class="settings-desc" data-t="privacy_3_text"
-                        style="color: #94a3b8; font-size: 0.85rem; padding-left: 0.25rem; line-height: 1.5;">
-                        Utilizziamo l'infrastruttura sicura di <strong style="color:white;">Google Firebase</strong>.
+                    <p class="settings-desc text-slate-400 text-085 pl-1 leading-15" data-t="privacy_3_text">
+                        Utilizziamo l'infrastruttura sicura di <strong class="text-white">Google Firebase</strong>.
                         Connessioni SSL/TLS e database protetti. I dati sensibili sono accessibili solo all'utente
                         proprietario e ai destinatari espliciti della condivisione.
                     </p>
@@ -134,31 +127,28 @@
             </div>
 
             <!-- 4. Condivisione -->
-            <div class="settings-item" style="cursor: default;">
-                <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
+            <div class="settings-item cursor-default">
+                <div class="settings-item-header flex-col items-start gap-3">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box"
-                            style="background: rgba(244, 67, 54, 0.1); color: var(--accent-red);">
+                        <div class="settings-icon-box icon-box-red">
                             <span class="material-symbols-outlined">share</span>
                         </div>
                         <div class="settings-text">
                             <span class="settings-label" data-t="privacy_4_title">4. CONDIVISIONE DATI</span>
                         </div>
                     </div>
-                    <p class="settings-desc" data-t="privacy_4_text"
-                        style="color: #94a3b8; font-size: 0.85rem; padding-left: 0.25rem; line-height: 1.5;">
-                        Nessun dato viene venduto a terzi. La condivisione avviene <strong style="color: white;">solo su
+                    <p class="settings-desc text-slate-400 text-085 pl-1 leading-15" data-t="privacy_4_text">
+                        Nessun dato viene venduto a terzi. La condivisione avviene <strong class="text-white">solo su
                             tua esplicita azione</strong> tramite la funzione "Condividi" verso le email che selezioni.
                     </p>
                 </div>
             </div>
 
             <!-- 5. Diritti -->
-            <div class="settings-item" style="cursor: default;">
-                <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
+            <div class="settings-item cursor-default">
+                <div class="settings-item-header flex-col items-start gap-3">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box"
-                            style="background: rgba(255, 193, 7, 0.1); color: var(--accent-amber);">
+                        <div class="settings-icon-box icon-box-amber">
                             <span class="material-symbols-outlined">gavel</span>
                         </div>
                         <div class="settings-text">
@@ -166,11 +156,11 @@
                         </div>
                     </div>
 
-                    <ul class="settings-desc"
-                        style="list-style: none; padding: 0; margin-left: 0.5rem; border-left: 2px solid rgba(255,255,255,0.1); padding-left: 1rem; color: #94a3b8; font-size: 0.85rem; line-height: 1.5;">
-                        <li style="margin-bottom: 0.5rem;" data-t="privacy_5_li1">• Diritto di accesso ai propri dati.
+                    <ul
+                        class="settings-desc list-none p-0 ml-2 border-l-2 border-white-10 pl-4 text-slate-400 text-085 leading-15">
+                        <li class="mb-2" data-t="privacy_5_li1">• Diritto di accesso ai propri dati.
                         </li>
-                        <li style="margin-bottom: 0.5rem;" data-t="privacy_5_li2">• Diritto alla cancellazione ("Oblio")
+                        <li class="mb-2" data-t="privacy_5_li2">• Diritto alla cancellazione ("Oblio")
                             eliminando l'account.</li>
                         <li data-t="privacy_5_li3">• Diritto di rettifica delle informazioni.</li>
                     </ul>
@@ -178,9 +168,8 @@
             </div>
 
             <!-- Footer: Update Date -->
-            <div style="text-align: center; margin-top: 1rem; margin-bottom: 2rem;">
-                <p style="font-size: 0.7rem; color: rgba(255,255,255,0.3); letter-spacing: 0.05em;"
-                    data-t="privacy_update_text">
+            <div class="text-center my-4">
+                <p class="text-07 text-white-30 tracked-wide" data-t="privacy_update_text">
                     Ultimo aggiornamento: Gennaio 2026
                 </p>
             </div>
