--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -35,9 +35,9 @@
         <!-- LANGUAGE SELECTOR -->
         <div class="lang-selector-container">
             <button class="lang-btn-float" id="lang-toggle-btn">
-                <span class="material-symbols-outlined" style="font-size: 18px;">language</span>
+                <span class="material-symbols-outlined text-18">language</span>
                 <span class="lang-label" data-t="language">Lingua</span>
-                <span class="material-symbols-outlined" style="font-size: 16px;">expand_more</span>
+                <span class="material-symbols-outlined text-16">expand_more</span>
             </button>
             <div class="lang-dropdown" id="lang-dropdown">
                 <!-- JS popola questo -->
@@ -107,7 +107,7 @@
 
                 <!-- Submit Button -->
                 <button type="submit" id="register-submit-btn" class="accesso-btn" data-t="create_account_btn">
-                    <span class="material-symbols-outlined" style="font-size: 20px;">check_circle</span>
+                    <span class="material-symbols-outlined text-20">check_circle</span>
                     Nuova registrazione
                 </button>
 
@@ -123,7 +123,7 @@
 
             <!-- Footer Legale -->
             <div class="legal-footer">
-                <span style="opacity: 0.5;">Titanium Protocol V3.1</span>
+                <span class="opacity-50">Titanium Protocol V3.1</span>
             </div>
 
         </div>
