--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -15,98 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Protocollo Comune V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
-
-    <!-- CSS specifico per la lista scadenze -->
-    <style>
-        .filled {
-            font-variation-settings: 'FILL' 1;
-        }
-
-        /* Filter Chips Titanium Style */
-        .filter-container {
-            display: flex;
-            gap: 0.5rem;
-            padding: 1rem;
-            overflow-x: auto;
-            scrollbar-width: none;
-        }
-
-        .filter-container::-webkit-scrollbar {
-            display: none;
-        }
-
-        .filter-chip {
-            padding: 0.5rem 1rem;
-            border-radius: 12px;
-            background: var(--surface-sub);
-            border: 1px solid var(--border-color);
-            color: var(--text-secondary);
-            font-size: 0.7rem;
-            font-weight: 800;
-            text-transform: uppercase;
-            letter-spacing: 0.1em;
-            white-space: nowrap;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-
-        .filter-chip.active {
-            background: var(--accent-blue);
-            color: white;
-            border-color: var(--accent-blue);
-            box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3);
-        }
-
-        /* Search Bar Animated */
-        #search-bar-container {
-            position: fixed;
-            top: 70px;
-            /* Sotto l'header */
-            left: 0;
-            right: 0;
-            z-index: 90;
-            padding: 0.75rem 1rem;
-            background: var(--surface-card);
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid var(--border-color);
-            transform: translateY(-150%);
-            transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1), opacity 0.4s;
-            opacity: 0;
-            max-width: 768px;
-            margin: 0 auto;
-        }
-
-        #search-bar-container.active {
-            transform: translateY(0);
-            opacity: 1;
-        }
-
-        .search-input-wrapper {
-            position: relative;
-            display: flex;
-            align-items: center;
-        }
-
-        .search-input-wrapper input {
-            width: 100%;
-            background: var(--surface-sub);
-            border: 1px solid var(--border-color);
-            border-radius: 12px;
-            padding: 0.75rem 1rem 0.75rem 2.5rem;
-            color: var(--text-primary);
-            font-size: 0.9rem;
-            outline: none;
-        }
-
-        .search-input-wrapper .material-symbols-outlined {
-            position: absolute;
-            left: 0.75rem;
-            color: var(--text-secondary);
-            font-size: 1.2rem;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -129,9 +38,9 @@
                     </a>
                 </div>
                 <div class="header-center">
-                    <h2 class="header-title" data-t="deadlines_title">
+                    <h1 class="header-title" data-t="deadlines_title">
                         SCADENZE
-                    </h2>
+                    </h1>
                 </div>
                 <div class="header-right">
                     <a href="home_page.html" class="btn-icon-header">
@@ -143,7 +52,7 @@
         <div class="spacer-header"></div>
 
         <!-- Search Bar -->
-        <div id="search-bar-container">
+        <div id="search-bar-container" class="search-bar-animated">
             <div class="search-input-wrapper">
                 <span class="material-symbols-outlined">search</span>
                 <input id="deadline-search" type="text" data-t-placeholder="search_deadlines_placeholder"
@@ -154,32 +63,27 @@
         <main class="settings-container no-select">
 
             <!-- Barra Ordinamento (Row Layout V3.0) -->
-            <div
-                style="display: flex !important; flex-direction: row !important; align-items: center !important; justify-content: space-between !important; width: 100%; padding: 0.5rem 1rem; border-bottom: 1px solid rgba(255,255,255,0.05); margin-bottom: 0.5rem; flex-wrap: nowrap !important;">
+            <div class="flex flex-nowrap items-center justify-between w-full py-2 px-4 border-b border-white-5 mb-2">
 
                 <!-- Sinistra: Conteggio -->
-                <div style="display: flex; align-items: center; gap: 0.5rem; flex-shrink: 0;">
+                <div class="flex items-center gap-2 shrink-0">
                     <span id="deadline-count"
-                        style="background: rgba(59, 130, 246, 0.2); color: var(--text-primary); font-size: 10px; font-weight: 900; padding: 2px 8px; border-radius: 20px; min-width: 24px; text-align: center;">0</span>
+                        class="bg-blue-glass-20 text-primary text-10 font-black py-05 px-2 rounded-full min-w-6 text-center">0</span>
                     <span data-t="deadlines_total"
-                        style="font-size: 10px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-primary); white-space: nowrap;">Scadenze
+                        class="text-10 font-heavy all-caps tracked-wide text-primary whitespace-nowrap">Scadenze
                         Totali</span>
                 </div>
 
                 <!-- Destra: Ordinamento -->
-                <div class="titanium-dropdown"
-                    style="width: auto !important; margin-left: auto !important; flex-shrink: 0;">
-                    <div id="sort-trigger"
-                        style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer; opacity: 0.8; white-space: nowrap;">
-                        <span class="material-symbols-outlined" style="font-size: 16px;">sort</span>
+                <div class="titanium-dropdown w-auto ml-auto shrink-0">
+                    <div id="sort-trigger" class="flex items-center gap-1 cursor-pointer opacity-80 whitespace-nowrap">
+                        <span class="material-symbols-outlined text-16">sort</span>
                         <span id="current-sort" data-t="sort_date_near"
-                            style="font-size: 10px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.1em;">DATA
+                            class="text-10 font-black all-caps tracked-wide">DATA
                             (VICINA)</span>
-                        <span class="material-symbols-outlined"
-                            style="font-size: 14px; opacity: 0.4;">expand_more</span>
+                        <span class="material-symbols-outlined text-14 opacity-40">expand_more</span>
                     </div>
-                    <div id="sort-menu" class="titanium-dropdown-menu"
-                        style="right: 0; left: auto; transform-origin: top right; min-width: 140px;">
+                    <div id="sort-menu" class="titanium-dropdown-menu right-0 origin-tr min-w-140">
                         <div class="titanium-dropdown-item active" data-t="sort_date_near" data-value="date-asc">DATA
                             (VICINA)</div>
                         <div class="titanium-dropdown-item" data-t="sort_date_far" data-value="date-desc">DATA (LONTANA)
@@ -200,15 +104,13 @@
             </div>
 
             <!-- List Content -->
-            <div id="scadenze-list" class="settings-group" style="padding-bottom: 80px;">
+            <div id="scadenze-list" class="settings-group pb-20">
                 <!-- Loading State -->
-                <div
-                    style="display: flex; flex-direction: column; align-items: center; justify-content: center; opacity: 0.3; padding: 5rem 0; gap: 1rem;">
-                    <div
-                        style="width: 40px; height: 40px; border: 2px solid rgba(255,255,255,0.05); border-top-color: var(--accent-blue); border-radius: 50%; animation: spin 2s linear infinite;">
+                <div class="flex flex-col items-center justify-center opacity-30 py-20 gap-4">
+                    <div class="size-10 border-2 border-white-5 border-t-blue-500 rounded-full animate-spin">
                     </div>
-                    <p style="font-size: 9px; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; margin: 0;"
-                        data-t="analyzing_data">Analisi dati...</p>
+                    <p class="text-07 font-bold all-caps tracking-widest m-0" data-t="analyzing_data">Analisi dati...
+                    </p>
                 </div>
             </div>
 
